fix scrollbar

--- a/src/app/components/customers-list/customers-list.component.scss
+++ b/src/app/components/customers-list/customers-list.component.scss
@@ -4,11 +4,12 @@
   display: flex;
   flex-direction: column;
   .customers-list-form {
-    width: 100%;
+    width: calc(100% - 18px);
     display: flex;
   }
   .customers-list-body {
     flex: 1;
+    overflow: auto;
     .customers-list-table {
       width: 100%;
       table-layout: fixed;
